[tool.poetry]
name = "dolt-demos"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
astroid = "2.3.3"
boto3 = "1.16.46"
botocore = "1.19.46"
certifi = "2020.12.5"
chardet = "4.0.0"
click = "7.1.2"
cx-Oracle = "8.1.0"
decorator = "4.4.2"
idna = "2.10"
isort = "4.3.21"
jmespath = "0.10.0"
joblib = "1.0.0"
lazy-object-proxy = "1.4.3"
mccabe = "0.6.1"
mysql-connector-python = "8.0.21"
nltk = "3.5"
numpy = "1.19.4"
pandas = "1.2.0"
protobuf = "3.14.0"
psutil = "5.8.0"
psycopg2-binary = "2.8.6"
py = "1.10.0"
pylint = "2.4.4"
python-dateutil = "2.8.1"
pytz = "2020.5"
regex = "2020.11.13"
requests = "2.25.1"
retry = "0.9.2"
s3transfer = "0.3.3"
scikit-learn = "0.24.0"
scipy = "1.6.0"
six = "1.15.0"
sklearn = "0.0"
SQLAlchemy = "1.3.22"
threadpoolctl = "2.1.0"
tqdm = "4.55.0"
urllib3 = "1.26.2"
wrapt = "1.11.2"
jupyter = "^1.0.0"
dolt = "^0.9.0"
metaflow = {path = "../../metaflow"}
httplib2 = "^0.18.1"
doltpy = "^1.1.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
